client: fixes alignment of add room button (menu)

--- a/stylus/framework/sidebar.styl
+++ b/stylus/framework/sidebar.styl
@@ -103,7 +103,7 @@
 				background: navigation-background
 				color: darken(gainsboro-dark, 10)
 		.fl-notification
-			margin: 12px 5px 5px 
+			margin: 12px 5px 5px
 	.nav-tab-search
 		width: 12%
 		a
@@ -141,16 +141,16 @@ a.nav-title-wrap
 		float: right
 		margin-right: 10px
 		margin-top: -3px
-		border: 1px solid 
+		border: 1px solid
 		border-radius: 50%
 		width: 17px
 		height: 17px
 		text-align: center
-		line-height: 14px
+		line-height: 15px
 
 
 // Sidebar Link Styling
-		
+
 .nav-list
 	.item
 		@extend $functional-list
